base/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kargo-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kargo-demo
  template:
    metadata:
      labels:
        app: kargo-demo
    spec:
      containers:
      - name: nginx 
        image:  ghcr.io/argadepp/web:0.0.1
        volumeMounts:
        - name: content
          mountPath: /usr/share/nginx/html
          readOnly: true
      volumes:
      - name: content
        configMap:
          name: kargo-demo-content
