base/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server
spec:
  ingressClassName: nginx
  rules:
  - host: prod.localhost
    http:
      paths:
      - backend:
          service:
            name: kargo-demo
            port:
              number: 80
        path: /
        pathType: Prefix
